<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h6x_controller_interface</name>
  <version>0.0.0</version>
  <description>Description of controller_interface</description>
  <maintainer email="mountain.inside1310@gmail.com">isato</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>controller_interface</build_depend>

  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>